--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 
 
       <div class="player-controls">
-        <ion-icon name="play-back-outline" title="Previous"></ion-icon>
-        <ion-icon name="play-outline play-button" title="Play"></ion-icon>
-        <ion-icon name="play-forward-outline" title="Next"></ion-icon>
+        <ion-icon name="play-back-outline" class="icon" title="Previous"></ion-icon>
+        <ion-icon name="play-outline" class="play-button icon" title="Play"></ion-icon>
+        <ion-icon name="play-forward-outline" class="icon" title="Next"></ion-icon>
       </div>
 
     </div>
