--- a/index.html
+++ b/index.html
@@ -5,33 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- CSS -->
     <link rel="stylesheet" href="./style.css" />
-    <!-- ion icon -->
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
-      defer
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
-      defer
-    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- JS -->
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
     <title>Music Player</title>
   </head>
   <body>
     <div class="background">
-      <img src="./assets/1.jpg" alt="backgroung image" id="bg-img">
+      <img src="" alt="backgroung image" id="bg-img" />
     </div>
 
     <div class="container">
       <div class="player-img">
-        <img src="./assets/1.jpg" alt="music image" class="active" id="cover">
+        <img src="" alt="music image" class="active" id="cover" />
       </div>
 
-      <h2 id="music-title">Test</h2>
-      <h3 id="music-artist">Test h2</h3>
+      <h2 id="music-title"></h2>
+      <h3 id="music-artist"></h3>
 
       <div class="player-progress" id="player-progress">
         <div class="progress" id="progress"></div>
@@ -41,13 +37,23 @@
         </div>
       </div>
 
-
       <div class="player-controls">
-        <ion-icon name="play-back-outline" class="icon" title="Previous"></ion-icon>
-        <ion-icon name="play-outline" class="play-button icon" title="Play"></ion-icon>
-        <ion-icon name="play-forward-outline" class="icon" title="Next"></ion-icon>
+        <i
+          class="icon fa-solid fa-backward"
+          title="Previous"
+          id="prev"
+        ></i>
+        <i
+          class="play-button icon fa-solid fa-play"
+          title="Play"
+          id="play"
+        ></i>
+        <i
+          class="icon fa-solid fa-forward"
+          title="Next"
+          id="next"
+        ></i>
       </div>
-
     </div>
   </body>
 </html>
